Improve left panel CSS to fix issue whereby left panel can overflow

--- a/src/viewer.css
+++ b/src/viewer.css
@@ -99,9 +99,13 @@ body.dragging {
   font-size: small;
 }
 
+.h-full-minus-10 {
+  height: calc(100% - 2.5rem);
+}
+
 .tab-scroll {
   overflow-y: auto;
-  height: calc(100vh - 2.5rem);
+  height: 100%;
 }
 
 .tooltip-arrow {
